# ComfyUI-NAG-Extended

./: README.md  pyproject.toml  samplers.py
anima/: model.py
chroma/: layers.py  model.py
flux/: layers.py  model.py
hidream/: model.py
hunyuan_video/: model.py
klein/: model.py
lumina2/: attention.py  model.py
sd/: attention.py  openaimodel.py
sd3/: mmdit.py
wan/: model.py
workflows/: NAG-Anima-ComfyUI-Workflow.json
